k8s/mqtt/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-service
spec:
  ports:
    - name: mqtt
      port: 1883
      targetPort: 1883
      protocol: TCP
  selector:
    app: mosquitto
