k8s/mqtt/base/tcpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: mqtt-ingress
spec:
  parentRefs:
  - name: global-gateway
    namespace: infra
    sectionName: mqtt
  rules:
  - backendRefs:
    - name: mosquitto
      port: 1883
